--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <div class="desktop-menu space-x-4">
                 <a href="index.html" class="hover:text-pink-200">Home</a>
                 <a href="menu.html" class="hover:text-pink-200">Menu</a>
-                <a href="order.html" class="hover:text-pink-200">Order Now</a>
                 <a href="admin.html" class="hover:text-pink-200">Admin</a>
             </div>
         </div>
@@ -50,7 +49,6 @@
             <div class="flex flex-col space-y-2">
                 <a href="index.html" class="hover:text-pink-200 py-2">Home</a>
                 <a href="menu.html" class="hover:text-pink-200 py-2">Menu</a>
-                <a href="order.html" class="hover:text-pink-200 py-2">Order Now</a>
                 <a href="admin.html" class="hover:text-pink-200 py-2">Admin</a>
             </div>
         </div>
@@ -160,43 +158,15 @@
     <!-- Featured Cakes -->
     <div class="container mx-auto py-8 md:py-16 px-4">
         <h2 class="text-2xl md:text-3xl font-bold text-center mb-8 md:mb-12">Featured Cakes</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-8">
-            <!-- Cake Card 1 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden cake-card">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587" alt="Chocolate Cake" class="w-full h-48 object-cover">
-                <div class="p-4 md:p-6">
-                    <h3 class="text-lg md:text-xl font-bold mb-2">Chocolate Delight</h3>
-                    <p class="text-gray-600 mb-4">Rich chocolate cake with ganache</p>
-                    <p class="text-pink-600 font-bold">From $25.99</p>
-                </div>
-            </div>
-
-            <!-- Cake Card 2 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden cake-card">
-                <img src="https://images.unsplash.com/photo-1621303837174-89787a7d4729" alt="Vanilla Cake" class="w-full h-48 object-cover">
-                <div class="p-4 md:p-6">
-                    <h3 class="text-lg md:text-xl font-bold mb-2">Vanilla Dream</h3>
-                    <p class="text-gray-600 mb-4">Classic vanilla cake with buttercream</p>
-                    <p class="text-pink-600 font-bold">From $22.99</p>
-                </div>
-            </div>
-
-            <!-- Cake Card 3 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden cake-card">
-                <img src="https://images.unsplash.com/photo-1624353365286-3f8d62daad51" alt="Strawberry Cake" class="w-full h-48 object-cover">
-                <div class="p-4 md:p-6">
-                    <h3 class="text-lg md:text-xl font-bold mb-2">Strawberry Bliss</h3>
-                    <p class="text-gray-600 mb-4">Fresh strawberry cake with cream</p>
-                    <p class="text-pink-600 font-bold">From $27.99</p>
-                </div>
-            </div>
+        <div id="featuredCakes" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-8">
+            <!-- Cake cards will be dynamically added here -->
         </div>
     </div>
 
     <!-- Footer -->
     <footer class="bg-pink-800 text-white py-6 md:py-8">
         <div class="container mx-auto text-center px-4">
-            <p>&copy; 2024 Cake Delights. All rights reserved.</p>
+            <p>&copy; 2024 MoonGlow Cakes. All rights reserved.</p>
         </div>
     </footer>
 
@@ -208,6 +178,44 @@
         mobileMenuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
+
+        // Load featured cakes from localStorage
+        function loadFeaturedCakes() {
+            const featuredCakesContainer = document.getElementById('featuredCakes');
+            const cakes = JSON.parse(localStorage.getItem('cakeVariants') || '[]');
+            
+            // Filter cakes that are marked as featured or both
+            const featuredCakes = cakes.filter(cake => 
+                cake.category === 'featured' || cake.category === 'both'
+            );
+
+            if (featuredCakes.length === 0) {
+                featuredCakesContainer.innerHTML = `
+                    <div class="col-span-full text-center text-gray-500 py-8">
+                        No featured cakes available
+                    </div>
+                `;
+                return;
+            }
+
+            featuredCakesContainer.innerHTML = featuredCakes.map(cake => `
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden cake-card">
+                    <img src="${cake.image}" alt="${cake.name}" class="w-full h-48 object-cover">
+                    <div class="p-4 md:p-6">
+                        <h3 class="text-lg md:text-xl font-bold mb-2">${cake.name}</h3>
+                        <p class="text-gray-600 mb-4">${cake.description}</p>
+                        <p class="text-pink-600 font-bold mb-4">From ${cake.prices.small} BDT</p>
+                        <button onclick="window.location.href='order.html?cake=${cake.name.toLowerCase().replace(/\s+/g, '-')}'" 
+                            class="w-full bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition duration-300">
+                            Order Now
+                        </button>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        // Load featured cakes when the page loads
+        loadFeaturedCakes();
     </script>
 </body>
 </html> 
