--- a/admin.html
+++ b/admin.html
@@ -161,6 +161,7 @@
                                 <option value="">Select Admin</option>
                                 <option value="Al Rafi Ahmed">Al Rafi Ahmed</option>
                                 <option value="Saymoon Nahar Mariam">Saymoon Nahar Mariam</option>
+                                <option value="Yubayer Bin Jakir">Yubayer Bin Jakir</option>
                             </select>
                         </div>
                     </div>
@@ -421,9 +422,15 @@
             },
             {
                 username: 'Saymoon Nahar Mariam',
-                password: '1234',
+                password: 'Saymoon2004',
                 position: 'Managing Director',
                 image: 'https://randomuser.me/api/portraits/women/44.jpg'
+            },
+            {
+                username: 'Yubayer Bin Jakir',
+                password: '1234',
+                position: 'Operational Administrator',
+                image: 'https://randomuser.me/api/portraits/men/32.jpg'
             }
         ];
 
