--- a/menu.html
+++ b/menu.html
@@ -25,33 +25,129 @@
             .mobile-menu.active {
                 display: block;
             }
+            /* Mobile Responsive Styles */
+            .brand-name {
+                font-size: 1.5rem !important;
+            }
+            .nav-link {
+                font-size: 1rem !important;
+                padding: 0.4rem 0.8rem !important;
+            }
+            .mobile-nav-link {
+                font-size: 1rem !important;
+                padding: 0.6rem 0.8rem !important;
+            }
+            .container {
+                padding-left: 1rem;
+                padding-right: 1rem;
+            }
+            h2 {
+                font-size: 1.5rem !important;
+            }
+            p {
+                font-size: 0.9rem !important;
+            }
+            .cake-card {
+                margin-bottom: 1rem;
+            }
+            .cake-card img {
+                height: 36px !important;
+            }
+            .cake-card h3 {
+                font-size: 1.1rem !important;
+            }
+            .cake-card p {
+                font-size: 0.85rem !important;
+            }
+            .cake-card button {
+                font-size: 0.9rem !important;
+                padding: 0.5rem !important;
+            }
+        }
+        /* New Navigation Styles */
+        .nav-link {
+            position: relative;
+            font-size: 1.25rem;
+            font-weight: 600;
+            padding: 0.5rem 1rem;
+            transition: all 0.3s ease;
+            border-radius: 0.5rem;
+        }
+        .nav-link:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: translateY(-2px);
+        }
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: 0;
+            left: 50%;
+            background-color: white;
+            transition: all 0.3s ease;
+            transform: translateX(-50%);
+        }
+        .nav-link:hover::after {
+            width: 80%;
+        }
+        .nav-link.active {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        .nav-link.active::after {
+            width: 80%;
+        }
+        .nav-container {
+            background: linear-gradient(135deg, #ec4899 0%, #be185d 100%);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .brand-name {
+            font-size: 2rem;
+            font-weight: 700;
+            background: linear-gradient(to right, #ffffff, #f3f4f6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .mobile-nav-link {
+            font-size: 1.25rem;
+            font-weight: 600;
+            padding: 0.75rem 1rem;
+            transition: all 0.3s ease;
+            border-radius: 0.5rem;
+            display: block;
+            text-align: center;
+        }
+        .mobile-nav-link:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: translateX(5px);
         }
     </style>
 </head>
 <body class="bg-gray-100">
     <!-- Navigation -->
-    <nav class="bg-pink-600 text-white p-4">
+    <nav class="nav-container text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Cake Delights</h1>
+            <h1 class="brand-name">MoonGlow Cakes</h1>
             <!-- Mobile Menu Button -->
-            <button id="mobileMenuBtn" class="mobile-menu md:hidden">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button id="mobileMenuBtn" class="mobile-menu md:hidden p-2 rounded-lg hover:bg-pink-700 transition-colors duration-300">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                 </svg>
             </button>
             <!-- Desktop Menu -->
-            <div class="desktop-menu space-x-4">
-                <a href="index.html" class="hover:text-pink-200">Home</a>
-                <a href="menu.html" class="hover:text-pink-200">Menu</a>
-                <a href="admin.html" class="hover:text-pink-200">Admin</a>
+            <div class="desktop-menu space-x-6">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="menu.html" class="nav-link active">Menu</a>
+                <a href="admin.html" class="nav-link">Admin</a>
             </div>
         </div>
         <!-- Mobile Menu -->
         <div id="mobileMenu" class="mobile-menu hidden md:hidden mt-4">
             <div class="flex flex-col space-y-2">
-                <a href="index.html" class="hover:text-pink-200 py-2">Home</a>
-                <a href="menu.html" class="hover:text-pink-200 py-2">Menu</a>
-                <a href="admin.html" class="hover:text-pink-200 py-2">Admin</a>
+                <a href="index.html" class="mobile-nav-link">Home</a>
+                <a href="menu.html" class="mobile-nav-link">Menu</a>
+                <a href="admin.html" class="mobile-nav-link">Admin</a>
             </div>
         </div>
     </nav>
@@ -100,7 +196,7 @@
                     <div class="p-4 md:p-6">
                         <h3 class="text-lg md:text-xl font-bold mb-2">${cake.name}</h3>
                         <p class="text-gray-600 mb-4">${cake.description}</p>
-                        <p class="text-pink-600 font-bold mb-4">From ${cake.prices.small} BDT</p>
+                        <p class="text-pink-600 font-bold mb-4">Price per Pound: ${cake.pricePerPound} BDT</p>
                         <button onclick="window.location.href='order.html?cake=${cake.name.toLowerCase().replace(/\s+/g, '-')}'" 
                             class="w-full bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700 transition duration-300">
                             Order Now
